5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1680_1952.log
== TEST (2019-04-23 17:24:54) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario >= 2.765 and salario <= 5.531):
	d = salario/0.08
if(d >= 2.826 and d =4.664):
	a = d/0.225
-- ERROR:
File "XXXX", line 5
    if(d >= 2.826 and d =4.664):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:24:59) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario >= 2.765 and salario <= 5.531):
	d = salario/0.08
if(d >= 2.826 and d <=4.664):
	a = d/0.225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(d >= 2.826 and d <=4.664):
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:25:22) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario >= 2.765 and salario <= 5.531):
	d = salario/0.08
elif(d >= 2.826 and d <=4.664):
	a = d/0.225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    elif(d >= 2.826 and d <=4.664):
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:26:33) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario >= 2.765 and salario <= 5.531):
	d = salario/0.08
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:26:42) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario >= 2.765 and salario <= 5.531):
	d = salario/0.08

print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:27:12) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario >= 2.765 and salario <= 5.531):
	d = salario/0.11
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:27:34) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario >= 2.765 and salario <= 5.531):
	print(salario/0.11)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:27:37) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario >= 2.765 and salario <= 5.531):
	print(salario/0.11)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:27:38) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario >= 2.765 and salario <= 5.531):
	print(salario/0.11)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:28:03) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario >= 2765.67 and salario <= 5531.38):
	print(salario/0.11)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:28:11) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario >= 2765.67 and salario <= 5531.38):
	print(salario/0.11)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:28:36) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario >= 2765.67 and salario <= 5531.38):
	print(round(salario/0.11,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:29:08) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario >= 2765.67 and salario <= 5531.38):
	print(round(salario/0.89,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:29:23) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario >= 2765.67 and salario <= 5531.38):
	print(round(salario/0.11,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:29:49) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario >= 2765.67 and salario <= 5531.38):
	print(round(0.11/salario,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:30:32) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario >= 2765.67 and salario <= 5531.38):
	print(round(salario/(100/11),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:30:54) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario >= 2765.67 and salario <= 5531.38):
	print(round(salario/(11/100),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:32:24) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario >= 2765.67 and salario <= 5531.38):
	a = salario/0.11
	print(round(a/(25.5/100),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:32:39) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario >= 2765.67 and salario <= 5531.38):
	a = salario/0.11
	print(round(a/(0.225),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:32:54) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario >= 2765.67 and salario <= 5531.38):
	a = salario/0.11


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:33:12) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario >= 2765.67 and salario <= 5531.38):
	a = salario/0.11

print(round(a,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(a,2))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:33:21) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario >= 2765.67 and salario <= 5531.38):
	a = salario/0.11

print(round(a,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(a,1))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:42:11) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario <= 1659.38):
	d = salario * 0.92
elif(salario >= 1659.39 and salario <= 2765.66):
	d = salario * 0.91
elif(salario >= 2765.67 and salario <= 5531.31):
	d = salario * 0.89
elif(salario > 5531.31):
	d = salario - 608.44

d	
	
print(round(d,1))
-- OUTPUT:
1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:43:00) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario <= 1659.38):
	d = salario * 0.92
elif(salario >= 1659.39 and salario <= 2765.66):
	d = salario * 0.91
elif(salario >= 2765.67 and salario <= 5531.31):
	d = salario * 0.89
elif(salario > 5531.31):
	d = salario - 608.44

d	
if(d <= 1903.98):
	print("Isento")
print(round(d,1))
-- OUTPUT:
Isento
1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:47:15) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario <= 1659.38):
	d = salario * 0.92
elif(salario >= 1659.39 and salario <= 2765.66):
	d = salario * 0.91
elif(salario >= 2765.67 and salario <= 5531.31):
	d = salario * 0.89
elif(salario > 5531.31):
	d = salario - 608.44
d	
if(d <= 1903.98):
	print("Isento")
elif(d >=1903.99 and d <= 2826.65):
	r = d * 0.925
elif(d >=2826.66 and d <= 3751.05):
	r = d * 0.85
elif(d >=3751.06 and d <= 4664.68):
	r = d * 0.775
elif(d > 4664.68):
	r = d * 0.725
	
print("Salario liquido = R$ ",r)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 23, in <module>
    print("Salario liquido = R$ ",r)	
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:47:24) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario <= 1659.38):
	d = salario * 0.92
elif(salario >= 1659.39 and salario <= 2765.66):
	d = salario * 0.91
elif(salario >= 2765.67 and salario <= 5531.31):
	d = salario * 0.89
elif(salario > 5531.31):
	d = salario - 608.44
d	
if(d <= 1903.98):
	print("Isento")
elif(d >=1903.99 and d <= 2826.65):
	r = d * 0.925
elif(d >=2826.66 and d <= 3751.05):
	r = d * 0.85
elif(d >=3751.06 and d <= 4664.68):
	r = d * 0.775
elif(d > 4664.68):
	r = d * 0.725
	
print("Salario liquido = R$ ",r)	
-- EXECUTION TIME:
0.20526
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1680/1952/main.py", line 23, in <module>
    print("Salario liquido = R$ ",r)	
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:47:34) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario <= 1659.38):
	d = salario * 0.92
elif(salario >= 1659.39 and salario <= 2765.66):
	d = salario * 0.91
elif(salario >= 2765.67 and salario <= 5531.31):
	d = salario * 0.89
elif(salario > 5531.31):
	d = salario - 608.44
d	
if(d <= 1903.98):
	print("Isento")
elif(d >=1903.99 and d <= 2826.65):
	r = d * 0.925
elif(d >=2826.66 and d <= 3751.05):
	r = d * 0.85
elif(d >=3751.06 and d <= 4664.68):
	r = d * 0.775
elif(d > 4664.68):
	r = d * 0.725
	
print("Salario liquido = R$ ",r)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 23, in <module>
    print("Salario liquido = R$ ",r)	
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:48:00) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario <= 1659.38):
	d = salario * 0.92
elif(salario >= 1659.39 and salario <= 2765.66):
	d = salario * 0.91
elif(salario >= 2765.67 and salario <= 5531.31):
	d = salario * 0.89
elif(salario > 5531.31):
	d = salario - 608.44
d	
if(d <= 1903.98):
	print("Isento")
elif(d >=1903.99 and d <= 2826.65):
	r = d * 0.925
elif(d >=2826.66 and d <= 3751.05):
	r = d * 0.85
elif(d >=3751.06 and d <= 4664.68):
	r = d * 0.775
elif(d > 4664.68):
	r = d * 0.725
	
print("Salario liquido = R$",r)	
-- EXECUTION TIME:
0.186994
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1680/1952/main.py", line 23, in <module>
    print("Salario liquido = R$",r)	
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:48:02) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario <= 1659.38):
	d = salario * 0.92
elif(salario >= 1659.39 and salario <= 2765.66):
	d = salario * 0.91
elif(salario >= 2765.67 and salario <= 5531.31):
	d = salario * 0.89
elif(salario > 5531.31):
	d = salario - 608.44
d	
if(d <= 1903.98):
	print("Isento")
elif(d >=1903.99 and d <= 2826.65):
	r = d * 0.925
elif(d >=2826.66 and d <= 3751.05):
	r = d * 0.85
elif(d >=3751.06 and d <= 4664.68):
	r = d * 0.775
elif(d > 4664.68):
	r = d * 0.725
	
print("Salario liquido = R$ ",r)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 23, in <module>
    print("Salario liquido = R$ ",r)	
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:48:04) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario <= 1659.38):
	d = salario * 0.92
elif(salario >= 1659.39 and salario <= 2765.66):
	d = salario * 0.91
elif(salario >= 2765.67 and salario <= 5531.31):
	d = salario * 0.89
elif(salario > 5531.31):
	d = salario - 608.44
d	
if(d <= 1903.98):
	print("Isento")
elif(d >=1903.99 and d <= 2826.65):
	r = d * 0.925
elif(d >=2826.66 and d <= 3751.05):
	r = d * 0.85
elif(d >=3751.06 and d <= 4664.68):
	r = d * 0.775
elif(d > 4664.68):
	r = d * 0.725
	
print("Salario liquido = R$ ",r)	
-- EXECUTION TIME:
0.202623
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1680/1952/main.py", line 23, in <module>
    print("Salario liquido = R$ ",r)	
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:48:29) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario <= 1659.38):
	d = salario * 0.92
elif(salario >= 1659.39 and salario <= 2765.66):
	d = salario * 0.91
elif(salario >= 2765.67 and salario <= 5531.31):
	d = salario * 0.89
elif(salario > 5531.31):
	d = salario - 608.44
d	
if(d <= 1903.98):
	print("Isento")
elif(d >=1903.99 and d <= 2826.65):
	r = d * 0.925
elif(d >=2826.66 and d <= 3751.05):
	r = d * 0.85
elif(d >=3751.06 and d <= 4664.68):
	r = d * 0.775
elif(d > 4664.68):
	r = d * 0.725
	
print("Salario liquido = R$ ",round(r,2))	
-- EXECUTION TIME:
0.175477
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1680/1952/main.py", line 23, in <module>
    print("Salario liquido = R$ ",round(r,2))	
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:48:32) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario <= 1659.38):
	d = salario * 0.92
elif(salario >= 1659.39 and salario <= 2765.66):
	d = salario * 0.91
elif(salario >= 2765.67 and salario <= 5531.31):
	d = salario * 0.89
elif(salario > 5531.31):
	d = salario - 608.44
d	
if(d <= 1903.98):
	print("Isento")
elif(d >=1903.99 and d <= 2826.65):
	r = d * 0.925
elif(d >=2826.66 and d <= 3751.05):
	r = d * 0.85
elif(d >=3751.06 and d <= 4664.68):
	r = d * 0.775
elif(d > 4664.68):
	r = d * 0.725
	
print("Salario liquido = R$ ",round(r,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 23, in <module>
    print("Salario liquido = R$ ",round(r,2))	
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:50:46) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario <= 1659.38):
	d = salario * 0.92
elif(salario >= 1659.39 and salario <= 2765.66):
	d = salario * 0.91
elif(salario >= 2765.67 and salario <= 5531.31):
	d = salario * 0.89
elif(salario > 5531.31):
	d = salario - 608.44
d	
if(d <= 1903.98):
	print("Isento")
elif(d >=1903.99 and d <= 2826.65):
	r = d * 7.5/100
elif(d >=2826.66 and d <= 3751.05):
	r = d * 15/100
elif(d >=3751.06 and d <= 4664.68):
	r = d * 22.5/100
elif(d > 4664.68):
	r = d * 27.5/100
	
print("Salario liquido = R$ ",round(r,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 23, in <module>
    print("Salario liquido = R$ ",round(r,2))	
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:51:18) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario <= 1659.38):
	d = salario * 0.92
elif(salario >= 1659.39 and salario <= 2765.66):
	d = salario * 0.91
elif(salario >= 2765.67 and salario <= 5531.31):
	d = salario * 0.89
elif(salario > 5531.31):
	d = salario - 608.44
d	
if(d <= 1903.98):
	print("Isento")
elif(d >=1903.99 and d <= 2826.65):
	r = d * 7.5/100
elif(d >=2826.66 and d <= 3751.05):
	r = d * 15/100
elif(d >=3751.06 and d <= 4664.68):
	r = d * 100/22.5
elif(d > 4664.68):
	r = d * 27.5/100
	
print("Salario liquido = R$ ",round(r,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 23, in <module>
    print("Salario liquido = R$ ",round(r,2))	
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:51:31) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario <= 1659.38):
	d = salario * 0.92
elif(salario >= 1659.39 and salario <= 2765.66):
	d = salario * 0.91
elif(salario >= 2765.67 and salario <= 5531.31):
	d = salario * 0.89
elif(salario > 5531.31):
	d = salario - 608.44
d	
if(d <= 1903.98):
	print("Isento")
elif(d >=1903.99 and d <= 2826.65):
	r = d * 0.925
elif(d >=2826.66 and d <= 3751.05):
	r = d * 0.85
elif(d >=3751.06 and d <= 4664.68):
	r = d * 0.775
elif(d > 4664.68):
	r = d * 0.725
	
print("Salario liquido = R$ ",round(r,2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 23, in <module>
    print("Salario liquido = R$ ",round(r,2))	
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:52:18) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario <= 1659.38):
	d = salario * 0.92
elif(salario >= 1659.39 and salario <= 2765.66):
	d = salario * 0.91
elif(salario >= 2765.67 and salario <= 5531.31):
	d = salario * 0.89
elif(salario > 5531.31):
	d = salario - 608.44
d	
if(d <= 1903.98):
	print("Isento")
elif(d >=1903.99 and d <= 2826.65):
	r = d * 0.925
	print("Salario liquido = R$ ",round(r,2))
elif(d >=2826.66 and d <= 3751.05):
	r = d * 0.85
	print("Salario liquido = R$ ",round(r,2))
elif(d >=3751.06 and d <= 4664.68):
	r = d * 0.775
	print("Salario liquido = R$ ",round(r,2))
elif(d > 4664.68):
	r = d * 0.725
	print("Salario liquido = R$ ",round(r,2))

-- EXECUTION TIME:
0.187334
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Isento
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Isento
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido = R$  3571.76
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:52:21) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario <= 1659.38):
	d = salario * 0.92
elif(salario >= 1659.39 and salario <= 2765.66):
	d = salario * 0.91
elif(salario >= 2765.67 and salario <= 5531.31):
	d = salario * 0.89
elif(salario > 5531.31):
	d = salario - 608.44
d	
if(d <= 1903.98):
	print("Isento")
elif(d >=1903.99 and d <= 2826.65):
	r = d * 0.925
	print("Salario liquido = R$ ",round(r,2))
elif(d >=2826.66 and d <= 3751.05):
	r = d * 0.85
	print("Salario liquido = R$ ",round(r,2))
elif(d >=3751.06 and d <= 4664.68):
	r = d * 0.775
	print("Salario liquido = R$ ",round(r,2))
elif(d > 4664.68):
	r = d * 0.725
	print("Salario liquido = R$ ",round(r,2))

-- OUTPUT:
Isento
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 19:57:28) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario <= 1659.38):
	d = salario * 0.92
elif(salario >= 1659.39 and salario <= 2765.66):
	d = salario * 0.91
elif(salario >= 2765.67 and salario <= 5531.31):
	d = salario * 0.89
elif(salario > 5531.31):
	d = salario - 608.44
d	
if(d <= 1903.98):
	print("Salario liquido = R$ ",round(d,2))
elif(d >=1903.99 and d <= 2826.65):
	r = d * 0.925
	print("Salario liquido = R$ ",round(r,2))
elif(d >=2826.66 and d <= 3751.05):
	r = d * 0.85
	print("Salario liquido = R$ ",round(r,2))
elif(d >=3751.06 and d <= 4664.68):
	r = d * 0.775
	print("Salario liquido = R$ ",round(r,2))
elif(d > 4664.68):
	r = d * 0.725
	print("Salario liquido = R$ ",round(r,2))

-- OUTPUT:
Salario liquido = R$  1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 19:57:41) 
-- CODE:
salario = float(input("Salario bruto: "))

if(salario <= 1659.38):
	d = salario * 0.92
elif(salario >= 1659.39 and salario <= 2765.66):
	d = salario * 0.91
elif(salario >= 2765.67 and salario <= 5531.31):
	d = salario * 0.89
elif(salario > 5531.31):
	d = salario - 608.44
d	
if(d <= 1903.98):
	print("Salario liquido = R$ ",round(d,2))
elif(d >=1903.99 and d <= 2826.65):
	r = d * 0.925
	print("Salario liquido = R$ ",round(r,2))
elif(d >=2826.66 and d <= 3751.05):
	r = d * 0.85
	print("Salario liquido = R$ ",round(r,2))
elif(d >=3751.06 and d <= 4664.68):
	r = d * 0.775
	print("Salario liquido = R$ ",round(r,2))
elif(d > 4664.68):
	r = d * 0.725
	print("Salario liquido = R$ ",round(r,2))

-- EXECUTION TIME:
0.141963
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido = R$  1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido = R$  1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido = R$  3571.76
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
